--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ name = "comptools"
 version = "0.1.0"
 edition = "2021"
 description = "Create iterators using Python's list comprehesion style."
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/jeertmans/comptools"
+keywords = ["list", "comprehesion", "python", "iterator", "macro"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
